--- a/index.html
+++ b/index.html
@@ -1,43 +1,96 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz Game</title>
   <style>
-    body { font-family: Arial; padding: 20px; text-align: center; }
-    #ad { display: none; margin-top: 20px; }
-    #collectDone { display: none; margin-top: 20px; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #f0f4f8, #d9e2ec);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: #fff;
+      border-radius: 12px;
+      padding: 30px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      width: 100%;
+      text-align: center;
+    }
+    h2 {
+      color: #2b2d42;
+    }
+    input[type="number"] {
+      width: 80%;
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    button {
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
+    #ad {
+      display: none;
+      margin-top: 20px;
+    }
+    #collectDone {
+      display: none;
+      margin-top: 20px;
+      background-color: #007BFF;
+    }
+    #collectDone:hover {
+      background-color: #0056b3;
+    }
+    #message {
+      font-weight: bold;
+      color: #e63946;
+    }
   </style>
 </head>
 <body>
-  <h2>আজকের কুইজ</h2>
-  <div id="quizBox"></div>
-  <input type="number" id="answer" placeholder="উত্তর লিখুন"><br><br>
-  <button onclick="submitAnswer()">Submit</button>
-  <p id="message"></p>
+  <div class="container">
+    <h2>আজকের কুইজ</h2>
+    <div id="quizBox"></div>
+    <input type="number" id="answer" placeholder="উত্তর লিখুন"><br>
+    <button onclick="submitAnswer()">Submit</button>
+    <p id="message"></p><div id="collectSection" style="display:none;">
+  <button onclick="showAd()">Collect Point</button>
+</div>
 
-  <div id="collectSection" style="display:none;">
-    <button onclick="showAd()">Collect Point</button>
-  </div>
+<div id="ad">
+  <h4>দয়া করে নিচের বিজ্ঞাপনটি দেখুন...</h4>
+  <script type="text/javascript">
+    atOptions = {
+      'key': 'c93f837a3b37d17465960ae20588e1fe',
+      'format': 'iframe',
+      'height': 250,
+      'width': 300,
+      'params': {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/c93f837a3b37d17465960ae20588e1fe/invoke.js"></script>
+</div>
 
-  <div id="ad">
-    <h4>দয়া করে নিচের বিজ্ঞাপনটি দেখুন...</h4>
-    <script type="text/javascript">
-      atOptions = {
-        'key': 'c93f837a3b37d17465960ae20588e1fe',
-        'format': 'iframe',
-        'height': 250,
-        'width': 300,
-        'params': {}
-      };
-    </script>
-    <script type="text/javascript" src="//www.highperformanceformat.com/c93f837a3b37d17465960ae20588e1fe/invoke.js"></script>
-  </div>
+<button id="collectDone" onclick="collectPoint()">Collect Done</button>
 
-  <button id="collectDone" onclick="collectPoint()">Collect Done</button>
-
-  <script>
+  </div>  <script>
     let a = Math.floor(Math.random() * 20 + 1);
     let b = Math.floor(Math.random() * 20 + 1);
     document.getElementById("quizBox").innerText = `${a} + ${b} = ?`;
@@ -64,6 +117,5 @@
       alert("আপনার পয়েন্ট যোগ করা হয়েছে!");
       // এখানে চাইলে WebApp.sendData() দিয়ে টেলিগ্রামে ডেটা পাঠানো যায়
     }
-  </script>
-</body>
+  </script></body>
 </html>
